# Vacancy-Parser-SQL

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: DB_manager.py  base_api.py  create_DB.py  employer.py  hh.py  interface.py
